styled panel body to inline block to fix bleed-over block in feb printed schedule

--- a/public/css/scheduleprint.css
+++ b/public/css/scheduleprint.css
@@ -7,7 +7,11 @@
     html body * {
 		visibility: hidden;
 		border-collapse: separate;
-    }
+	}
+	
+	div.panel-body {
+		display: inline-block;
+	}
 
     header nav, footer {
         display:none;
